--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "scripts": {
     "dev": "next dev -p 3001 -H 0.0.0.0",
     "build": "next build",
-    "start": "next start -p 3001"
+    "start": "next start -p 3001",
+    "i18n:extract": "npx i18next-parser \"src/**/*.{ts,tsx}\" --config i18next-parser.config.js"
   },
   "dependencies": {
     "@google/genai": "^1.32.0",
+    "@vitalets/google-translate-api": "^9.2.1",
+    "i18next": "^25.7.3",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.556.0",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-i18next": "^16.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -21,6 +26,7 @@
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
+    "i18next-parser": "^9.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
